# py-roller

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: tests.yml
constraints/: audio-cpu.txt  audio-cu124.txt
pyroller/: __init__.py  batch.py  batch_builder.py  batch_models.py  batch_runner.py  doctor.py  engine.py  i18n.py  logging_utils.py  process_control.py  progress.py  protocol.py
pyroller/aligner/: __init__.py  base.py  common.py  global_dp_v1.py  registry.py  repetition.py
pyroller/cli/: config.py  doctor.py  install.py  main.py  runlike.py
pyroller/domain/: __init__.py  models.py
pyroller/filter/: __init__.py  base.py  chain.py  dereverb.py  dereverb_nara_wpe.py  noise_gate.py  registry.py
pyroller/parser/: __init__.py  base.py  en_arpabet.py  mul_ipa.py  registry.py  zh_pinyin.py  zh_router_pinyin.py
pyroller/pipeline/: __init__.py  execution_context.py  runner.py  stages.py  validation.py
pyroller/resources/constraints/: audio-cpu.txt  audio-cu124.txt
pyroller/resources/locales/: ja.json  ko.json  pl.json  pt.json  sk.json  zh.json  zh_hant.json  zh_hant_hk.json
pyroller/resources/requirements/: __init__.py  audio-core.txt  audio-runtime.txt
pyroller/splitter/: __init__.py  base.py  demucs.py  registry.py
pyroller/transcriber/: __init__.py  base.py  composed.py  ctc_utils.py  download_logging.py  en_whisperx.py  engine_types.py  hf_download_config.py  mms_phonetic.py  model_resolver.py  mul_wav2vec2_phoneme.py  protocol.py  registry.py  specs.py  whisperx.py  whisperx_runtime.py
pyroller/transcriber/engines/: __init__.py  base.py  faster_whisper_engine.py  wav2vec2_ctc_engine.py  whisperx_engine.py
pyroller/transcriber/unitizers/: __init__.py  base.py  common.py  en_arpabet.py  mul_ipa.py  mul_ipa_from_text.py  zh_pinyin_from_ctc.py  zh_pinyin_from_text.py
pyroller/utils/: __init__.py  json.py  text.py  time.py
pyroller/writer/: __init__.py  ass_karaoke.py  base.py  lrc.py  registry.py
scripts/: check_i18n.py
tests/: __init__.py  conftest.py  factories.py  test_artifact_models.py  test_ass_writer.py  test_batch_builder.py  test_batch_runner.py  test_cli_config.py  test_cli_parser.py  test_doctor.py  test_engine.py  test_execution_context.py  test_filter_registry.py  test_global_dp_aligner.py  test_hf_download_config.py  test_install.py  test_logging_utils.py  test_lrc_writer.py  test_parser_registry.py  test_parsers.py  test_pipeline_aw_integration.py  test_pipeline_validation.py  test_process_control.py  test_progress.py  test_protocol.py  test_splitter_registry.py  test_transcriber_model_resolver.py  test_transcriber_registry.py  test_transcriber_unitizers.py  test_utils_json.py  test_writer_registry.py
