[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-roller"
version = "0.5.0"
description = "Composable lyric-audio alignment pipeline with staged execution, batch processing, and LRC/ASS export."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Harmonese" }]
keywords = [
  "lyrics",
  "subtitle",
  "karaoke",
  "alignment",
  "audio",
  "lrc",
  "ass",
  "cli",
  "batch",
  "transcription",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dependencies = [
  "pypinyin>=0.50.0",
  "opencc-python-reimplemented>=0.1.7",
  "pronouncing>=0.2.0",
  "phonemizer>=3.3.0",
  "gruut[ar,ru]>=2.4.0",
  "PyYAML>=6.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
audio-core = [
  "demucs>=4.0.1",
  "whisperx>=3.1.1",
  "pyannote.audio==3.4.0",
  "httpx[socks]>=0.28.0",
  "librosa>=0.10.0",
  "transformers>=4.39.0,<5",
  "huggingface_hub>=0.23.0,<1",
  "numpy>=1.24.0",
  "soundfile>=0.12.1",
  "scipy>=1.10.0",
  "bottleneck>=1.3.8",
  "nara_wpe>=0.0.11",
]


[project.scripts]
py-roller = "pyroller.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyroller*"]

[tool.setuptools.package-data]
pyroller = ["resources/constraints/*.txt", "resources/requirements/*.txt"]
