[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-roller"
version = "0.6.4"
description = "Composable lyric-audio alignment pipeline with staged execution, batch processing, and LRC/ASS export."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
authors = [{ name = "Harmonese" }]
keywords = [
  "lyrics",
  "subtitle",
  "karaoke",
  "alignment",
  "audio",
  "lrc",
  "ass",
  "cli",
  "batch",
  "transcription",
  "music",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dependencies = [
  "pypinyin>=0.50.0",
  "opencc-python-reimplemented>=0.1.7",
  "pronouncing>=0.2.0",
  "phonemizer>=3.3.0",
  "gruut[ar,ru]>=2.4.0",
  "PyYAML>=6.0",
  "tqdm>=4.66.0",
]

[project.scripts]
py-roller = "pyroller.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyroller*"]

[tool.setuptools.package-data]
pyroller = ["resources/constraints/*.txt", "resources/requirements/*.txt", "resources/locales/*.json"]
